{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 306,
  "lineage": "6a5175fc-ef1a-a05e-51ca-aed3f89e6948",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:security-group/sg-0f398ddad2ca81f6d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f398ddad2ca81f6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20220306042454550900000009",
            "name_prefix": "all_worker_management",
            "owner_id": "611783125133",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:security-group/sg-0b7a8b50981f3f9eb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b7a8b50981f3f9eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2022030604245455330000000a",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "611783125133",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:security-group/sg-02fd7e6463f9552c8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02fd7e6463f9552c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2022030604245838730000000b",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "611783125133",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:security-group/sg-0eae6f14c6153fcdd",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0eae6f14c6153fcdd",
            "ingress": [],
            "name": "gessa-eks-Gxc5mFpR2022030604245850970000000c",
            "name_prefix": "gessa-eks-Gxc5mFpR",
            "owner_id": "611783125133",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gessa-eks-Gxc5mFpR-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "gessa-eks-Gxc5mFpR-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:security-group/sg-0842278748cbdbeae",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0842278748cbdbeae",
            "ingress": [],
            "name": "gessa-eks-Gxc5mFpR2022030604245857160000000d",
            "name_prefix": "gessa-eks-Gxc5mFpR",
            "owner_id": "611783125133",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gessa-eks-Gxc5mFpR-eks_worker_sg",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "owned"
            },
            "tags_all": {
              "Name": "gessa-eks-Gxc5mFpR-eks_worker_sg",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1141677442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eae6f14c6153fcdd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-558901550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eae6f14c6153fcdd",
            "self": false,
            "source_security_group_id": "sg-0842278748cbdbeae",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-4114087246",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0842278748cbdbeae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3401058017",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0842278748cbdbeae",
            "self": false,
            "source_security_group_id": "sg-0eae6f14c6153fcdd",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-907945705",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0842278748cbdbeae",
            "self": false,
            "source_security_group_id": "sg-0eae6f14c6153fcdd",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1741493701",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0842278748cbdbeae",
            "self": false,
            "source_security_group_id": "sg-0842278748cbdbeae",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081c04b37326936a7",
            "domain": "vpc",
            "id": "eipalloc-081c04b37326936a7",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-130-36-161.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.36.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gessa-vpc-us-east-2a",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "tags_all": {
              "Name": "gessa-vpc-us-east-2a",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:internet-gateway/igw-04f7ddc2882bc4a87",
            "id": "igw-04f7ddc2882bc4a87",
            "owner_id": "611783125133",
            "tags": {
              "Name": "gessa-vpc",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "tags_all": {
              "Name": "gessa-vpc",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081c04b37326936a7",
            "connectivity_type": "public",
            "id": "nat-065b1205c48ce9dda",
            "network_interface_id": "eni-0f67279e504a62c34",
            "private_ip": "10.0.4.93",
            "public_ip": "3.130.36.161",
            "subnet_id": "subnet-07e2e18ce3182aa11",
            "tags": {
              "Name": "gessa-vpc-us-east-2a",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "tags_all": {
              "Name": "gessa-vpc-us-east-2a",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0987ab9d7838fe1061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-065b1205c48ce9dda",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0987ab9d7838fe106",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04f7ddc2882bc4a87",
            "id": "r-rtb-0d3dab71b9976c0801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3dab71b9976c080",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:route-table/rtb-0987ab9d7838fe106",
            "id": "rtb-0987ab9d7838fe106",
            "owner_id": "611783125133",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gessa-vpc-private",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "tags_all": {
              "Name": "gessa-vpc-private",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:route-table/rtb-0d3dab71b9976c080",
            "id": "rtb-0d3dab71b9976c080",
            "owner_id": "611783125133",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gessa-vpc-public",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "tags_all": {
              "Name": "gessa-vpc-public",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076cff71f74e24294",
            "route_table_id": "rtb-0987ab9d7838fe106",
            "subnet_id": "subnet-0df11340291c70738"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe8d9ee2ece2f68a",
            "route_table_id": "rtb-0987ab9d7838fe106",
            "subnet_id": "subnet-07ccb326341b372f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7316467be71f25d",
            "route_table_id": "rtb-0987ab9d7838fe106",
            "subnet_id": "subnet-0a68d55931385788b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035b35c37ba4d9313",
            "route_table_id": "rtb-0d3dab71b9976c080",
            "subnet_id": "subnet-07e2e18ce3182aa11"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039f834b5ffcee8c5",
            "route_table_id": "rtb-0d3dab71b9976c080",
            "subnet_id": "subnet-04308f58b648b98e2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c196db5f26fcf54",
            "route_table_id": "rtb-0d3dab71b9976c080",
            "subnet_id": "subnet-090bad04ef3c02193"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:subnet/subnet-0df11340291c70738",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df11340291c70738",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611783125133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gessa-vpc-private-us-east-2a",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gessa-vpc-private-us-east-2a",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:subnet/subnet-07ccb326341b372f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ccb326341b372f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611783125133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gessa-vpc-private-us-east-2b",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gessa-vpc-private-us-east-2b",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:subnet/subnet-0a68d55931385788b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a68d55931385788b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611783125133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gessa-vpc-private-us-east-2c",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gessa-vpc-private-us-east-2c",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:subnet/subnet-07e2e18ce3182aa11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e2e18ce3182aa11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "611783125133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gessa-vpc-public-us-east-2a",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gessa-vpc-public-us-east-2a",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:subnet/subnet-04308f58b648b98e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04308f58b648b98e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "611783125133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gessa-vpc-public-us-east-2b",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gessa-vpc-public-us-east-2b",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:subnet/subnet-090bad04ef3c02193",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090bad04ef3c02193",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "611783125133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gessa-vpc-public-us-east-2c",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gessa-vpc-public-us-east-2c",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5dcb7e91208ad0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:611783125133:vpc/vpc-0b5dcb7e91208ad0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8866b83cecc4273",
            "default_route_table_id": "rtb-0d72c72ee9f680f11",
            "default_security_group_id": "sg-08fcce1f4c27aa9bd",
            "dhcp_options_id": "dopt-3a134e52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b5dcb7e91208ad0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d72c72ee9f680f11",
            "owner_id": "611783125133",
            "tags": {
              "Name": "gessa-vpc",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            },
            "tags_all": {
              "Name": "gessa-vpc",
              "kubernetes.io/cluster/gessa-eks-Gxc5mFpR": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}